--- a/src/css/layout/shopping-list-main.css
+++ b/src/css/layout/shopping-list-main.css
@@ -10,7 +10,7 @@
   letter-spacing: -0.02em;
   line-height: calc(18 / 14);
 
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--shopping-list-text-color);
 }
 @media only screen and (min-width: 768px) {
   .shopping-list-text {
