--- a/src/css/layout/burger-menu.css
+++ b/src/css/layout/burger-menu.css
@@ -53,7 +53,7 @@
 }
 
 .mobile-modal-icon-close {
-  stroke: black;
+  stroke: var(--header-icon-color);
   transition: stroke var(--transition-duration) var(--timing-function);
 }
 
@@ -92,7 +92,6 @@
   align-items: flex-start;
   margin-left: auto;
   margin-right: auto;
- 
 }
 
 .mobile-menu-modal .shopping-list-header,
