--- a/src/css/layout/loader.css
+++ b/src/css/layout/loader.css
@@ -7,8 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #333333;
-  transition: opacity 2.75s, visibility 2.75s;
+  background: var(--bg-color);
+  backdrop-filter: blur(4px);
+  transition: opacity 500ms 250ms, visibility 500ms;
 }
 
 .loader--hidden {
@@ -21,9 +22,9 @@
   width: 75px;
   height: 75px;
   border: 15px solid #dddddd;
-  border-top-color: #009578;
+  border-top-color: var(--blue-color);
   border-radius: 50%;
-  animation: loading 1.75s ease infinite;
+  animation: loading 1000ms ease infinite;
 }
 
 @keyframes loading {
