--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,7 +1,5 @@
 <div class="container mobile-menu-modal" id="mobile-menu-modal">
   <div class="mobile-menu-modal-content">
-    
-
     <button class="btn login-btn login-modal" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
         <use href="./images/sprite.svg#arrow-right"></use>
@@ -18,15 +16,21 @@
             class="header-nav-link shopping-list-header"
             href="./shopping-list.html"
             >SHOPPING LIST
-            <svg сlass="cart" width="20" height="20">
-              <use href="./images/sprite.svg#uil_cart"></use></svg
-          ></a>
+            <svg class="cart" width="20" height="20">
+              <use href="./images/sprite.svg#uil_cart"></use>
+            </svg>
+            <span class="header-shopping-count is-hidden"></span>
+          </a>
         </li>
       </ul>
     </nav>
 
     <div class="mobile-menu-image-container">
-      <img src="./images/modal-window/mobile-menu.png" alt="books" class="mobile-menu-image">
+      <img
+        src="./images/modal-window/mobile-menu.png"
+        alt="books"
+        class="mobile-menu-image"
+      />
     </div>
   </div>
 </div>
