Update auth modal

--- a/src/partials/autorization-window.html
+++ b/src/partials/autorization-window.html
@@ -1,6 +1,6 @@
 <div class="authorization-backdrop is-hidden">
   <div class="authorization-modal">
-    <button class="modal-close-btn" type="button">
+    <button class="modal-close-btn js-auth-modal-close" type="button">
       <svg class="x-close" width="12" height="12">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
@@ -34,7 +34,12 @@
       <button class="authorization-form-submit" type="submit">Sing up</button>
     </form>
     <div class="authorization-btn">
-      <button class="authorization-btn-up authorization-btn-active" type="button">sing up</button>
+      <button
+        class="authorization-btn-up authorization-btn-active"
+        type="button"
+      >
+        sing up
+      </button>
       <button class="authorization-btn-in" type="button">sing in</button>
     </div>
   </div>
