--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,7 +49,7 @@
       </svg>
     </button>
 
-    <button class="button login-btn" type="button">
+    <button class="button login-btn js-sign-up-btn" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
         <use href="./images/sprite.svg#arrow-right"></use>
       </svg>
