Update auth modal styles

--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -39,6 +39,10 @@ html.light {
   --current-btn-text-color: #ffffff;
   --prev-icon-color: #b4afaf;
   --btn-border-color: #111111;
+  /* Authorization */
+  --auth-submit-btn-bg-color: #111111;
+  --auth-submit-btn-text-color: #f3f3f3;
+  --auth-sign-in-btn-text-color: rgba(17, 17, 17, 0.5);
 }
 
 html.dark {
@@ -63,6 +67,10 @@ html.dark {
   --current-btn-text-color: #000000;
   --prev-icon-color: #ffffff;
   --btn-border-color: #ffffff;
+  /* Authorization */
+  --auth-submit-btn-bg-color: #f6f6f6;
+  --auth-submit-btn-text-color: #202024;
+  --auth-sign-in-btn-text-color: rgba(246, 246, 246, 0.5);
 }
 
 h1,
