--- a/src/css/layout/autorization-window.css
+++ b/src/css/layout/autorization-window.css
@@ -34,7 +34,7 @@
   display: block;
   top: 192px;
   right: 72px;
-  stroke: var(--light-black-color);
+  stroke: var(--header-icon-color);
   fill: transparent;
 }
 
@@ -43,7 +43,7 @@
   display: block;
   top: 288px;
   right: 72px;
-  stroke: var(--light-black-color);
+  stroke: var(--header-icon-color);
   fill: transparent;
 }
 
@@ -51,19 +51,20 @@
   width: 100%;
   padding: 20px 40px;
   margin-bottom: 28px;
-  border: 2px solid var(--header-border-color);
+  border: 2px solid var(--border-color);
   border-radius: 40px;
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: -0.01em;
   text-transform: uppercase;
-  color: var(--nav-menu-text-color);
+  color: var(--text-color);
+  background-color: transparent;
 }
 
 .authorization-form-submit {
-    padding: 20px;
-    margin-top: 40px;
-    margin-bottom: 20px;
+  padding: 20px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   width: 100%;
   min-height: 64px;
   border-radius: 40px;
@@ -71,26 +72,25 @@
   line-height: 1.33px;
   letter-spacing: -0.01em;
   text-transform: uppercase;
-  color: var(--body-bg-color);
-  background-color: var(--header-border-color);
+  color: var(--auth-submit-btn-text-color);
+  background-color: var(--auth-submit-btn-bg-color);
 }
 .authorization-btn {
-font-size: 18px;
-display: flex;
-justify-content: center;
-gap: 20px;
-
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .authorization-btn-in,
 .authorization-btn-up {
-    line-height: 1.33px;
-    letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: rgba(17, 17, 17, 0.5);
+  line-height: 1.33px;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: var(--auth-sign-in-btn-text-color);
 }
 
 .authorization-btn-active {
- color: var( --blue-color);
- text-decoration: underline;
+  color: var(--blue-color);
+  text-decoration: underline;
 }
