fix-btn-and-scroll

--- a/src/partials/aside-support-ukraine.html
+++ b/src/partials/aside-support-ukraine.html
@@ -7,16 +7,19 @@
   </div>
   <ul class="sup-content-wrp"></ul>
   <div class="btn-wrapper">
-    <button id="scrollDownButton" type="button" class="sup-ukr-scroll-btn">
-      <svg class="sub-btn-svg" width="11.92" height="7.98">
+    <button id="scrollButton" type="button" class="sup-ukr-scroll-btn">
+      <svg id="svgDown" class="sub-btn-svg" width="11.92" height="7.98">
         <use
           class="sup-svg-use"
           href="/src/images/sprite.svg#icon-arr-dwn-svg"
         ></use>
       </svg>
-    </button>
-    <button id="scrollUpButton" type="button" class="sup-ukr-scroll-btn">
-      <svg class="sub-btn-svg" width="11.92" height="7.98">
+      <svg
+        id="svgUp"
+        class="sub-btn-svg is-hidden-sup-ukr"
+        width="11.92"
+        height="7.98"
+      >
         <use class="sup-svg-use" href="/src/images/sprite.svg#arrow-up"></use>
       </svg>
     </button>
