--- a/src/css/layout/aside-support-ukraine.css
+++ b/src/css/layout/aside-support-ukraine.css
@@ -6,9 +6,10 @@
     #ffffff 100%
   );
   border-radius: 17px;
-  width: 335px;
+  max-width: 335px;
   height: 352px;
 }
+
 .sup-content-wrp {
   display: flex;
   flex-direction: column;
@@ -17,6 +18,24 @@
   padding-left: 40px;
   overflow: auto;
 }
+.sup-content-wrp::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  border-radius: 10px;
+}
+.sup-content-wrp::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+.sup-content-wrp::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: radial-gradient(
+    183.6% 183.01% at 59.76% -23.42%,
+    #4f2ee8 18.03%,
+    #ffffff 100%
+  );
+}
+
 @media only screen and (min-width: 768px) {
   .sup-content-wrp {
     height: 292px;
@@ -39,13 +58,28 @@
     height: 490px;
   }
 }
+@media only screen and (min-width: 1440px) {
+  .shopping-list-support-ukraine {
+    display: block;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
 .sup-ukr-header {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 12px;
   margin-bottom: 40px;
   padding-left: 40px;
-  padding-left: 40px;
+  padding-right: 40px;
   padding-top: 24px;
+}
+@media only screen and (max-width: 374px) {
+  .sup-ukr-header {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 .sup-ukr-text {
   font-style: normal;
@@ -54,6 +88,7 @@
   line-height: 1.14;
 }
 .sup-ukr-gerb {
+  width: 20px;
   color: var(--white-color);
   fill: currentColor;
 }
@@ -74,6 +109,9 @@
   height: 32px;
 }
 .sup-ukr-scroll-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 32px;
   height: 32px;
   background-color: var(--white-color);
@@ -92,15 +130,9 @@
   left: 50%;
   transform: translateX(-50%);
 }
-
 .shopping-list-support-ukraine {
   display: none;
 }
-
-@media only screen and (min-width: 1440px) {
-  .shopping-list-support-ukraine {
-    display: block;
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
+.is-hidden-sup-ukr {
+  display: none;
 }
