Mobile menu and container have been updated
.

--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,4 +1,4 @@
-<div class="container mobile-menu-modal" id="mobile-menu-modal">
+<div class="mobile-menu-modal" id="mobile-menu-modal">
   <div class="mobile-menu-modal-content">
     <button class="btn login-btn login-modal" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
@@ -24,13 +24,4 @@
         </li>
       </ul>
     </nav>
-
-    <div class="mobile-menu-image-container">
-      <img
-        src="./images/modal-window/mobile-menu.png"
-        alt="books"
-        class="mobile-menu-image"
-      />
-    </div>
-  </div>
 </div>
