--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container header-container">
+<div class="header-container">
   <a class="logo" href="./index.html">
     <div class="logo-images">
       <svg width="24" height="24">
@@ -43,6 +43,7 @@
       class="menu-burger js-open-menu-burger"
       aria-expanded="false"
       aria-controls="mobile-menu"
+    id="open-menu-burger"
     >
       <svg class="menu-burger-icon-open" width="28" height="28">
         <use href="./images/sprite.svg#burger"></use>
@@ -55,7 +56,7 @@
       </svg>
     </button>
 
-    <button class="close-mobile-modal-btn" type="button">
+    <button class="close-mobile-modal-btn" type="button" id="close-mobile-modal-btn">
       <svg class="mobile-modal-icon-close" width="14" height="14">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
