--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(17, 17, 17, 0.4);
+  backdrop-filter: blur(4px);
 }
 
 .is-hidden {
@@ -20,6 +21,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
+  min-width: 300px;
   max-width: 287px;
   width: 100%;
   min-height: 682px;
