--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -4,6 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  overflow: scroll;
   background-color: rgba(17, 17, 17, 0.4);
   backdrop-filter: blur(4px);
 }
@@ -17,15 +18,16 @@
 
 .modal-box {
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 
-  min-width: 300px;
-  max-width: 287px;
+  max-width: 335px;
   width: 100%;
-  min-height: 682px;
+  height: 98%;
+  max-height: 806px;
   padding: 40px 24px;
+  overflow: auto;
 
   background-color: var(--modal-bg-color);
   border: 2px solid var(--border-color);
@@ -34,8 +36,11 @@
 
 @media screen and (min-width: 768px) {
   .modal-box {
-    max-width: 500px;
-    min-height: 385px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 579px;
+    max-height: 501px;
     padding: 40px;
   }
 }
