--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -9,11 +9,15 @@
     <nav class="header-nav header-nav-mobile">
       <ul class="list header-nav-list">
         <li class="header-nav-item">
-          <a class="header-nav-link current" href="./index.html">HOME</a>
+          <a
+            class="header-nav-link current js-burger-home-btn"
+            href="./index.html"
+            >HOME</a
+          >
         </li>
         <li class="header-nav-item">
           <a
-            class="header-nav-link shopping-list-header"
+            class="header-nav-link shopping-list-header js-burger-shop-btn"
             href="./shopping-list.html"
             >SHOPPING LIST
             <svg class="cart" width="20" height="20">
@@ -24,4 +28,5 @@
         </li>
       </ul>
     </nav>
+  </div>
 </div>
