--- a/src/css/layout/burger-menu.css
+++ b/src/css/layout/burger-menu.css
@@ -11,11 +11,11 @@
     #4f2ee8 18.03%,
     #ffffff 100%
   );
-  transition: transform 0.3s ease-in-out; 
+  transition: transform 0.3s ease-in-out;
 }
 
 .mobile-menu-modal.open {
-  transform: translateX(100%); 
+  transform: translateX(100%);
 }
 
 .js-open-menu-burger {
@@ -41,10 +41,18 @@
   height: 100vh;
   box-sizing: border-box;
   overflow-y: auto;
-  background-image: url(/src/images/modal-window/mobile-menu.png);
   background-size: 100% auto;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-image: url(/src/images/modal-window/mobile-menu.png);
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .mobile-menu-modal-content {
+    background-image: url(/src/images/modal-window/mobile-menu@2x.png);
+  }
 }
 
 .close-mobile-modal-btn {
@@ -107,4 +115,13 @@ body.modal-open {
 
 .mobile-menu-modal-content {
   overflow: auto;
+}
+
+.shopping-list-header.current {
+  color: var(--light-black-color);
+  background-color: var(--yellow-color);
+  padding: 8px 16px;
+  border-radius: 36px;
+  font-weight: 700;
+  border: none;
 }
