--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -18,13 +18,13 @@
 
 .modal-box {
   position: absolute;
-  top: 0;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
 
   max-width: 335px;
   width: 100%;
-  height: 98%;
+  height: 96%;
   max-height: 806px;
   padding: 40px 24px;
   overflow: auto;
