--- a/src/css/layout/pagination.css
+++ b/src/css/layout/pagination.css
@@ -112,6 +112,18 @@
   border: 1px solid var(--btn-border-color);
 }
 
+@media only screen and (max-width: 374px) {
+  .tui-pagination .tui-first,
+  .tui-pagination .tui-prev,
+  .tui-pagination .tui-next,
+  .tui-pagination .tui-last,
+  .tui-pagination .tui-prev-is-ellip,
+  .tui-pagination .tui-next-is-ellip {
+    width: 30px;
+    height: 30px;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .tui-pagination .tui-first,
   .tui-pagination .tui-prev,
