--- a/src/partials/aside-support-ukraine.html
+++ b/src/partials/aside-support-ukraine.html
@@ -7,7 +7,12 @@
   </div>
   <ul class="sup-content-wrp"></ul>
   <div class="btn-wrapper">
-    <button id="scrollButton" type="button" class="sup-ukr-scroll-btn">
+    <button
+      id="scrollButton"
+      type="button"
+      class="sup-ukr-scroll-btn"
+      aria-label="Scroll up"
+    >
       <svg id="svgDown" class="sub-btn-svg" width="11.92" height="7.98">
         <use
           class="sup-svg-use"
