--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <a class="logo" href="./index.html">
+  <a class="logo" href="./index.html" aria-label="Bookshelf logo">
     <div class="logo-images">
       <svg width="24" height="24">
         <use href="./images/sprite.svg#logo"></use>
