--- a/src/partials/autorization-window.html
+++ b/src/partials/autorization-window.html
@@ -1,6 +1,6 @@
 <div class="authorization-backdrop is-hidden">
   <div class="authorization-modal">
-    <button class="modal-close-btn js-auth-modal-close" type="button">
+    <button class="modal-close-btn js-auth-modal-close" type="button" aria-label="Authorization pop-up window close button">
       <svg class="x-close" width="12" height="12">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
