--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,6 +44,7 @@
       aria-expanded="false"
       aria-controls="mobile-menu"
       id="open-menu-burger"
+      aria-label="Burger menu button"
     >
       <svg class="menu-burger-icon-open" width="28" height="28">
         <use href="./images/sprite.svg#burger"></use>
