--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -197,9 +197,13 @@ input:checked + .slider:before {
   display: none;
 }
 
+.header-btn-wrapper {
+  position: relative;
+}
+
 @media only screen and (min-width: 768px) {
   .login-btn {
-    width: 184px;
+    min-width: 184px;
     height: 48px;
     background-color: var(--blue-color);
     color: var(--white-color);
@@ -209,6 +213,7 @@ input:checked + .slider:before {
     padding: 14px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -231,4 +236,56 @@ input:checked + .slider:before {
   border-radius: 36px;
   font-weight: 700;
   border: none;
+}
+
+.header-arrow-down {
+  fill: var(--white-color);
+}
+
+.sign-up-btn-text.grow {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: calc(29 / 22);
+  letter-spacing: -0.02em;
+}
+
+.log-out-btn {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 118px;
+  height: 48px;
+  color: var(--light-black-color);
+  background-color: var(--white-color);
+  border: 1.5px solid var(--light-black-color);
+  border-radius: 18px;
+  padding: 14px 24px;
+}
+
+@media only screen and (max-width: 767px) {
+  .log-out-btn {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .log-out-btn {
+    min-width: 184px;
+    padding: 14px;
+  }
+}
+
+.log-out-btn-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+  letter-spacing: -0.04em;
+  color: var(--light-black-color);
+}
+
+.log-out-arrow-right {
+  stroke: var(--yellow-color);
 }
