--- a/src/partials/autorization-window.html
+++ b/src/partials/autorization-window.html
@@ -1,27 +1,64 @@
 <div class="authorization-backdrop is-hidden">
   <div class="authorization-modal">
-    <button class="modal-close-btn js-auth-modal-close" type="button" aria-label="Authorization pop-up window close button">
+    <button
+      class="modal-close-btn js-auth-modal-close"
+      type="button"
+      aria-label="Authorization pop-up window close button"
+    >
       <svg class="x-close" width="12" height="12">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
     </button>
     <form class="authorization-form" autocomplete="on">
-      <input class="authorization-input" type="name" name="name" placeholder="Name" autofocus id="userName" />
-      <input class="authorization-input" type="email" name="email" placeholder="Email" id="userEmail" />
-      <svg class="input-img-mail" width="28" height="28">
-        <use href="./images/sprite.svg#mail"></use>
-      </svg>
-      <input class="authorization-input" type="password" name="password" placeholder="Password" id="userPassword" />
-      <svg class="input-img-pass" width="28" height="28">
-        <use href="./images/sprite.svg#lock"></use>
-      </svg>
-      <button class="authorization-form-submit" type="submit">Sing up</button>
+      <input
+        class="authorization-input"
+        type="name"
+        name="name"
+        placeholder="Name"
+        autofocus
+        id="userName"
+      />
+      <div class="user-email-wrapper">
+        <input
+          class="authorization-input"
+          type="email"
+          name="email"
+          placeholder="Email"
+          id="userEmail"
+        />
+        <svg class="input-img-mail" width="28" height="28">
+          <use href="./images/sprite.svg#mail"></use>
+        </svg>
+      </div>
+      <div class="user-password-wrapper">
+        <input
+          class="authorization-input"
+          type="password"
+          name="password"
+          placeholder="Password"
+          id="userPassword"
+        />
+        <svg class="input-img-pass" width="28" height="28">
+          <use href="./images/sprite.svg#lock"></use>
+        </svg>
+      </div>
+      <button class="authorization-form-submit" type="submit">Sign up</button>
+      <button class="authorization-sign-in-btn is-hidden" type="submit">
+        Sign in
+      </button>
     </form>
     <div class="authorization-btn">
-      <button class="authorization-btn-up authorization-btn-active" id="singUp" type="button">
-        sing up
+      <button
+        class="authorization-btn-up authorization-btn-active"
+        id="singUp"
+        type="button"
+      >
+        sign up
       </button>
-      <button class="authorization-btn-in" type="button" id="singIn">sing in</button>
+
+      <button class="authorization-btn-in" type="button" id="singIn">
+        sign in
+      </button>
     </div>
   </div>
 </div>
