--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,7 +1,11 @@
 <div class="mobile-menu-modal" id="mobile-menu-modal">
   <div class="mobile-menu-modal-content">
-    <button class="btn login-btn login-modal" type="button">
-      Sign up<svg class="arrow-right" width="20" height="20">
+    <button
+      class="btn login-btn login-modal js-burger-sign-up-btn"
+      type="button"
+    >
+      <span class="burger-sign-up-btn-text">Sign up</span>
+      <svg class="arrow-right" width="20" height="20">
         <use href="./images/sprite.svg#arrow-right"></use>
       </svg>
     </button>
@@ -28,5 +32,12 @@
         </li>
       </ul>
     </nav>
+
+    <button class="burger-log-out-btn is-hidden" aria-label="Log out button">
+      <span class="log-out-btn-text">Log out</span>
+      <svg class="log-out-arrow-right" width="20" height="20">
+        <use href="./images/sprite.svg#arrow-right"></use>
+      </svg>
+    </button>
   </div>
 </div>
