--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,18 +51,30 @@
       </svg>
     </button>
 
-    <button
-      class="button login-btn js-sign-up-btn"
-      type="button"
-      id="singUpBtnHeader"
-    >
-      <svg class="user-icon is-hidden" width="13" height="17">
-        <use href="./images/sprite.svg#user"></use></svg
-      ><span class="sign-up-btn-text">Sign up</span>
-      <svg class="arrow-right" width="20" height="20">
-        <use href="./images/sprite.svg#arrow-right"></use>
-      </svg>
-    </button>
+    <div class="header-btn-wrapper">
+      <button
+        class="button login-btn js-sign-up-btn"
+        type="button"
+        id="singUpBtnHeader"
+      >
+        <svg class="user-icon is-hidden" width="37" height="37">
+          <use href="./images/sprite.svg#user-icon-header"></use>
+        </svg>
+        <span class="sign-up-btn-text">Sign up</span>
+        <svg class="arrow-right" width="20" height="20">
+          <use href="./images/sprite.svg#arrow-right"></use>
+        </svg>
+        <svg class="header-arrow-down is-hidden" width="14" height="7">
+          <use href="./images/sprite.svg#arrow-down"></use>
+        </svg>
+      </button>
+      <button class="log-out-btn is-hidden" aria-label="Log out button">
+        <span class="log-out-btn-text">Log out</span>
+        <svg class="log-out-arrow-right" width="20" height="20">
+          <use href="./images/sprite.svg#arrow-right"></use>
+        </svg>
+      </button>
+    </div>
 
     <button
       class="close-mobile-modal-btn"
